# Wallos

./: .gitignore  package-lock.json  package.json
desktop-shell/: index.html
endpoints/cronjobs/: createdatabase.php
includes/: checksession.php  checkuser.php  connect.php  connect_endpoint.php  connect_endpoint_crontabs.php  desktop.php  footer.php  header.php
migrations/: 000016.php
scripts/: desktop-server.php  mcp-server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
styles/: styles.css
