[package]
name = "wallos-desktop"
version = "0.1.0"
description = "Wallos Desktop"
authors = ["Wallos"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "wallos_desktop_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
